--- a/index.html
+++ b/index.html
@@ -1,290 +1,660 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>DimeX</title>
 
-<title>Wallet</title>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet">
 
-<script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.min.js"></script>
-
-<script src="https://unpkg.com/@walletconnect/web3-provider@1.8.0/dist/umd/index.min.js"></script>
+<!-- ICON LIBRARY (IMPORTANT) -->
+<link rel="stylesheet"
+href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
 <style>
-
 body{
+margin:0;
+font-family:Poppins;
+background:#000;
+color:#fff;
+}
 
-background:black;
+/* SLIDER */
+.slider{
+width:100%;
+height:90vh;
+position:relative;
+overflow:hidden;
+background:#000;
+}
 
-color:white;
+.slide{
+position:absolute;
+top:0;
+left:0;
+width:100%;
+height:100%;
+object-fit:contain;
+object-position:center;
+background:#000;
+opacity:0;
+transition:opacity 1s ease-in-out;
+}
 
+.slide.active{
+opacity:1;
+}
+
+.overlay{
+position:absolute;
+top:0;
+left:0;
+width:100%;
+height:100%;
+background:linear-gradient(to bottom,rgba(0,0,0,0.3),rgba(0,0,0,0.6));
+}
+
+.topLogo{
+position:absolute;
+top:10px;
+left:50%;
+transform:translateX(-50%);
+z-index:5;
+}
+
+.topLogo img{
+width:180px;
+}
+  
+.heroText{
+position:absolute;
+bottom:40px;   /* gap reduce */
+left:50%;
+transform:translateX(-50%);
 text-align:center;
-
-margin-top:120px;
-
-font-family:Arial;
-
 }
 
-button{
+.heroText h1{
+font-size:52px;
+color:gold;
+margin:0;
+}
 
-padding:15px 30px;
-
+.btn{
 background:gold;
-
 border:none;
-
-font-size:18px;
-
-border-radius:8px;
-
+padding:16px 30px;
+border-radius:10px;
+font-weight:bold;
+margin-top:15px;
+cursor:pointer;
 }
 
+/* ticker */
+.ticker{
+background:#111;
+color:gold;
+padding:14px;
+overflow:hidden;
+white-space:nowrap;
+}
+
+.ticker span{
+display:inline-block;
+padding-left:100%;
+animation:scroll 50s linear infinite;
+}
+
+@keyframes scroll{
+0%{transform:translateX(0)}
+100%{transform:translateX(-100%)}
+}
+
+/* sections */
+.section{
+padding:60px 8%;
+max-width:1200px;
+margin:auto;
+}
+
+.section:nth-child(even){
+background:#0b0b0b;
+}
+
+.section h2{
+color:gold;
+font-size:30px;
+}
+
+.icon{
+color:gold;
+margin-right:8px;
+}
+
+.grid{
+display:grid;
+grid-template-columns:1fr 1fr;
+gap:25px;
+}
+
+.box{
+background:#111;
+padding:20px;
+border-radius:12px;
+}
+
+.footer{
+text-align:center;
+padding:40px;
+color:#777;
+}
+
+@media(max-width:900px){
+.grid{grid-template-columns:1fr}
+.heroText h1{font-size:30px}
+.slider{height:75vh}
+}
 </style>
-
 </head>
-
+  
 <body>
 
-<button onclick="connectWallet()">Connect Wallet</button>
+<!-- SLIDER -->
+<div class="slider">
 
-<div id="status" style="margin-top:20px;color:gold;"></div>
-
-<div id="dashboard" style="display:none;margin-top:40px;">
-
-<h3>Wallet Connected</h3>
-
-<button>Stake USDT</button>
-
-<button>Claim</button>
-
+<!-- TOP LOGO -->
+<div class="topLogo">
+<img src="https://raw.githubusercontent.com/glomartcom-netizen/Dimexhome/main/logodashbord.png">
 </div>
-<script>
 
-let provider;
+<img class="slide active"
+src="https://glomartcom-netizen.github.io/Dimexhome/file_0000000010947208bc00676243f4f87a.png">
 
-async function connectWallet(){
+<img class="slide"
+src="https://glomartcom-netizen.github.io/Dimexhome/file_00000000c6a072089a23049a3dd76e06.png">
 
-// 🟢 MetaMask browser
+<div class="overlay"></div>
 
-if(window.ethereum){
-
-try{
-
-provider = new ethers.providers.Web3Provider(window.ethereum);
-
-await provider.send("eth_requestAccounts", []);
-
-const signer = provider.getSigner();
-
-const address = await signer.getAddress();
-<!DOCTYPE html>
-
-<html>
-
-<head>
-
-<meta charset="UTF-8">
-
-<title>Wallet</title>
-
-<script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.min.js"></script>
-
-<script src="https://unpkg.com/@walletconnect/web3-provider@1.8.0/dist/umd/index.min.js"></script>
-
-<style>
-
-body{
-
-background:black;
-
-color:white;
-
-text-align:center;
-
-margin-top:120px;
-
-font-family:Arial;
-
-}
-
-padding:15px 30px;
-
-background:gold;
-
-border:none;
-
-font-size:18px;
-
-border-radius:8px;
-
-}
-
-</style>
-
-</head>
-
-<body>
-
-<button onclick="connectWallet()">Connect Wallet</button>
-
-<div id="status" style="margin-top:20px;color:gold;"></div>
-
-<div id="dashboard" style="display:none;margin-top:40px;">
-
-<h3>Wallet Connected</h3>
-
-<button>Stake USDT</button>
-
-<button>Claim</button>
-
+<div class="heroText">
+<h1>DimeX (DMX)</h1>
+<button class="btn" onclick="enter()">ENTER DASHBOARD</button>
 </div>
-
-<script>
-
-let provider;
-
-async function connectWallet(){
-
-// 🟢 MetaMask browser
-
-if(window.ethereum){
-
-try{
-
-provider = new ethers.providers.Web3Provider(window.ethereum);
-
-await provider.send("eth_requestAccounts", []);
-
-const signer = provider.getSigner();
-
-const address = await signer.getAddress();
-<!DOCTYPE html>
-
-<html>
-
-<head>
-
-<meta charset="UTF-8">
-
-<title>Wallet</title>
-
-<script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.min.js"></script>
-
-<script src="https://unpkg.com/@walletconnect/web3-provider@1.8.0/dist/umd/index.min.js"></script>
-
-<style>
-
-body{
-
-background:black;
-
-color:white;
-text-align:center;
-
-margin-top:120px;
-
-font-family:Arial;
-
-}
-
-button{
-
-padding:15px 30px;
-
-background:gold;
-
-border:none;
-
-font-size:18px;
-
-border-radius:8px;
-
-}
-
-</style>
-
-</head>
-
-<body>
-
-<button onclick="connectWallet()">Connect Wallet</button>
-
-<div id="status" style="margin-top:20px;color:gold;"></div>
-
-<div id="dashboard" style="display:none;margin-top:40px;">
-
-<h3>Wallet Connected</h3>
-
-<button>Stake USDT</button>
-
-<button>Claim</button>
 
 </div>
 
 <script>
+function enter(){
+  window.location.href =
+  "https://glomartcom-netizen.github.io/Dimexhome/dashboard.html";
+}
+</script>
+</div>
 
-let provider;
+<!-- PRICE TICKER -->
+<div class="ticker">
+<span id="tickerText">Loading crypto market...</span>
+</div>
 
-async function connectWallet(){
+<!-- GRAND PROJECT DETAILS -->
+<div class="section">
 
-// 🟢 MetaMask browser
+<div class="projectWrap">
 
-if(window.ethereum){
+<div class="projectTitle">
+<i class="fa-solid fa-folder-open"></i>
+DimeX Project Overview
+</div>
 
-try{
+<div class="tokenCard">
+<img src="https://i.ibb.co/HpqwGFqt/logo.png">
+<div class="tokenName">DimeX (DMX)</div>
+<div class="tokenSub">BNB Smart Chain • BEP-20</div>
+</div>
 
-provider = new ethers.providers.Web3Provider(window.ethereum);
+<div class="projectGrid">
 
-await provider.send("eth_requestAccounts", []);
+<div class="infoCard">
+<div class="infoIcon"><i class="fa-solid fa-coins"></i></div>
+<div class="infoTitle">Token</div>
+<div class="infoValue">DMX</div>
+</div>
 
-const signer = provider.getSigner();
+<div class="infoCard">
+<div class="infoIcon"><i class="fa-solid fa-link"></i></div>
+<div class="infoTitle">Network</div>
+<div class="infoValue">BNB Chain</div>
+</div>
 
-const address = await signer.getAddress();
+<div class="infoCard">
+<div class="infoIcon"><i class="fa-solid fa-chart-line"></i></div>
+<div class="infoTitle">Use</div>
+<div class="infoValue">Staking</div>
+</div>
 
-document.getElementById("status").innerHTML =
-"Connected: " + address;
+<div class="infoCard">
+<div class="infoIcon"><i class="fa-solid fa-database"></i></div>
+<div class="infoTitle">Supply</div>
+<div class="infoValue">1B DMX</div>
+</div>
 
-document.getElementById("dashboard").style.display="block";
+  </div>  <!-- grid close -->
+</div>    <!-- section close -->
 
-return;
+<!-- ABOUT -->
+<div class="section">
+<h2><i class="fa-solid fa-circle-info icon"></i>About DimeX</h2>
+<p>
+DimeX is designed as a staking-focused crypto ecosystem that enables users to stake DMX tokens and participate in a transparent on-chain reward system.  
+The platform emphasizes simplicity, long-term sustainability, and trust while creating a secure environment for users to earn rewards through blockchain technology.
+</p>
+</div>
+<!-- MISSION + VISION -->
+<div class="section grid">
+<div>
+<h2><i class="fa-solid fa-bullseye"></i> Mission</h2>
+<p>
+Our mission is to build a secure and transparent staking ecosystem on the BNB Smart Chain that empowers users through decentralized technology and sustainable reward mechanisms.
+</p>
+</div>
 
-}catch(err){
+<div>
+<h2><i class="fa-solid fa-eye"></i> Vision</h2>
+<p>
+Our vision is to create a globally trusted staking platform that promotes financial participation through blockchain innovation and responsible growth.
+</p>
+</div>
+</div>
 
-console.log(err);
+<!-- CORE VALUES -->
+<div class="section">
+<h2><i class="fa-solid fa-shield"></i> Core Values</h2>
 
+<div class="grid">
+
+<div class="box">
+<div class="icon"><i class="fa-solid fa-lock"></i></div>
+Smart contract security
+</div>
+
+<div class="box">
+<div class="icon"><i class="fa-solid fa-users"></i></div>
+Community growth
+</div>
+
+<div class="box">
+<div class="icon"><i class="fa-solid fa-chart-line"></i></div>
+Sustainable rewards
+</div>
+
+<div class="box">
+<div class="icon"><i class="fa-solid fa-globe"></i></div>
+Global expansion
+</div>
+
+</div>
+</div>
+   
+<!-- STAKING -->
+<div class="section">
+<h2><i class="fa-solid fa-coins"></i> Staking Platform</h2>
+<p>
+Secure decentralized staking with transparent reward distribution and community-driven structure.
+</p>
+  
+<div class="grid">
+<div class="box">✔ Secure staking</div>
+<div class="box">✔ Transparent rewards</div>
+<div class="box">✔ On-chain tracking</div>
+<div class="box">✔ Community rewards</div>
+</div>
+</div>
+
+<!-- VARIOUS ASSETS -->
+<div class="section">
+<h2><i class="fa-solid fa-layer-group icon"></i>Various Assets</h2>
+<p>
+DimeX supports multiple staking-related assets and future DeFi utilities including liquidity integration and ecosystem expansion.
+</p>
+</div>
+
+<!-- TOOLS -->
+<div class="section">
+<h2><i class="fa-solid fa-screwdriver-wrench icon"></i>Enhanced Tools</h2>
+<p>
+Advanced tools for analytics, reward tracking, and smart-contract interaction designed for usability and performance.
+</p>
+</div>
+
+<!-- MARKET ANALYSIS -->
+<div class="section">
+
+<h2>
+<i class="fa-solid fa-chart-line" style="color:gold;margin-right:10px;"></i>
+Market Analysis
+</h2>
+
+<p style="color:#ccc;font-size:18px;">
+DimeX integrates real-time cryptocurrency market insights allowing users to track global market movements, price trends and ecosystem growth across digital assets.
+</p>
+
+<div class="grid" style="margin-top:30px">
+
+<div class="box">
+<div class="icon">
+<i class="fa-solid fa-arrow-trend-up"></i>
+</div>
+<b>Live Market Trends</b><br>
+Monitor real-time price movements across major cryptocurrencies like BTC, ETH, BNB and stablecoins.
+</div>
+
+<div class="box">
+<div class="icon">
+<i class="fa-solid fa-chart-area"></i>
+</div>
+<b>Advanced Charts</b><br>
+Visual charts help users understand market cycles, volatility and price direction.
+</div>
+
+<div class="box">
+<div class="icon">
+<i class="fa-solid fa-globe"></i>
+</div>
+<b>Global Market Data</b><br>
+Track global crypto market capitalization, trading volume and ecosystem growth indicators.
+</div>
+
+<div class="box">
+<div class="icon">
+<i class="fa-solid fa-bolt"></i>
+</div>
+<b>Real-time Updates</b><br>
+Market data refreshes continuously to ensure up-to-date information.
+</div>
+
+<div class="box">
+<div class="icon">
+<i class="fa-solid fa-coins"></i>
+</div>
+<b>Multi-Asset Support</b><br>
+Supports analysis across multiple digital assets and blockchain ecosystems.
+</div>
+
+<div class="box">
+<div class="icon">
+<i class="fa-solid fa-shield"></i>
+</div>
+<b>Secure Data</b><br>
+All market data is fetched from trusted public crypto APIs.
+</div>
+
+</div>
+
+<!-- disclaimer -->
+<div class="box" style="margin-top:25px;background:#0e0e0e">
+<div class="icon">
+<i class="fa-solid fa-triangle-exclamation"></i>
+</div>
+<b>Market Disclaimer</b><br>
+Market analysis tools are provided for informational purposes only and do not constitute financial advice.  
+Users should conduct independent research before making financial decisions.
+</div>
+
+<!-- SMART CONTRACT -->
+<div class="section">
+<div class="section-inner">
+
+<div class="box" style="text-align:center; max-width:650px; margin:auto;">
+
+<h2>
+<i class="fa-solid fa-file-contract icon"></i>
+Smart Contract
+</h2>
+
+<input style="
+width:80%;
+max-width:500px;
+padding:12px;
+background:#000;
+color:#fff;
+border:1px solid #333;
+border-radius:8px;
+display:block;
+margin:15px auto;
+"
+value="PASTE_TOKEN_ADDRESS">
+
+<div style="margin-top:10px;color:#aaa;">
+Verify contract on 
+<span style="color:gold;">BscScan</span>
+</div>
+
+</div>
+
+</div>
+</div>
+
+<!-- TOKENOMICS -->
+<div class="section">
+<div class="section-inner">
+
+<h2>
+<i class="fa-solid fa-coins icon"></i>
+Tokenomics
+</h2>
+
+<div class="grid" style="margin-top:30px;">
+
+<!-- TOTAL SUPPLY -->
+<div class="box" style="
+text-align:center;
+background:linear-gradient(180deg,#111,#070707);
+border:1px solid #222;
+padding:30px;
+">
+
+<div style="font-size:40px;color:gold;margin-bottom:10px;">
+<i class="fa-solid fa-database"></i>
+</div>
+
+<div style="font-size:16px;color:#aaa;">Total Supply</div>
+
+<div style="font-size:26px;font-weight:bold;color:#fff;margin-top:8px;">
+1,000,000,000 DMX
+</div>
+
+</div>
+
+<!-- REWARD POOL -->
+<div class="box" style="
+text-align:center;
+background:linear-gradient(180deg,#111,#070707);
+border:1px solid #222;
+padding:30px;
+">
+
+<div style="font-size:40px;color:gold;margin-bottom:10px;">
+<i class="fa-solid fa-gift"></i>
+</div>
+
+<div style="font-size:16px;color:#aaa;">Reward Pool</div>
+
+<div style="font-size:26px;font-weight:bold;color:#fff;margin-top:8px;">
+250,000,000 DMX
+</div>
+
+</div>   <!-- grid close -->
+</div>   <!-- section-inner close -->
+</div>   <!-- section close -->
+
+<!-- ROADMAP -->
+<div class="section">
+<div class="section-inner">
+
+<h2>
+<i class="fa-solid fa-road icon"></i>
+Project Roadmap
+</h2>
+
+<p style="color:#ccc;font-size:18px;">
+The DimeX roadmap outlines the development phases of the ecosystem, focusing on long-term sustainability, platform security, and community growth.  
+Each phase represents the progressive expansion of the DimeX staking infrastructure.
+</p>
+
+<div class="grid" style="margin-top:30px">
+
+<div class="box">
+<div class="icon"><i class="fa-solid fa-cube"></i></div>
+<b>Phase 1 – Foundation</b><br><br>
+• DMX token creation on BNB Smart Chain  
+• Smart contract development & deployment  
+• Branding and official website launch  
+• Initial ecosystem structure setup  
+</div>
+
+<div class="box">
+<div class="icon"><i class="fa-solid fa-lock"></i></div>
+<b>Phase 2 – Staking Launch</b><br><br>
+• Staking smart contract release  
+• Dashboard user interface launch  
+• Wallet integration (Web3)  
+• Reward distribution activation  
+</div>
+
+<div class="box">
+<div class="icon"><i class="fa-solid fa-chart-line"></i></div>
+<b>Phase 3 – Growth</b><br><br>
+• Platform optimization  
+• Ecosystem expansion  
+• Community development  
+• Additional DeFi utilities integration  
+</div>
+
+</div>   <!-- grid close -->
+</div>   <!-- section-inner close -->
+</div>   <!-- section close -->
+
+<!-- DECLARATION -->
+<div class="section">
+<div class="section-inner">
+
+<h2>
+<i class="fa-solid fa-file-signature icon"></i>
+Declaration
+</h2>
+
+<div class="box" style="max-width:700px; margin:auto; text-align:center; color:#ccc;">
+
+DimeX is a blockchain-based staking platform operating on BNB Smart Chain.  
+All transactions are executed through publicly verifiable smart contracts.  
+Cryptocurrency involves risk and users should conduct independent research before participation.
+
+</div>
+
+</div>
+</div>
+
+<!-- CONTACT -->
+<div class="section">
+<h2><i class="fa-solid fa-envelope icon"></i>Contact</h2>
+
+<div class="box" style="text-align:center;max-width:500px;margin:auto">
+
+<div>
+<i class="fa-solid fa-paper-plane" style="color:gold;"></i>
+info@dimex.app
+</div>
+
+<div style="margin-top:10px">
+<i class="fa-solid fa-globe" style="color:gold;"></i>
+www.dimex.app
+</div>
+
+</div>
+</div>
+
+<div class="footer">© 2026 DimeX</div>
+
+<script>
+
+function enter(){
+  window.location.href="dashboard.html";
 }
 
-}
+window.addEventListener("load", function(){
 
-// 🟢 WalletConnect mobile
+  // SLIDER
+  let i = 0;
+  const slides = document.querySelectorAll(".slide");
 
-const walletConnectProvider = new WalletConnectProvider.default({
+  setInterval(()=>{
+    if(slides.length){
+      slides[i].classList.remove("active");
+      i = (i + 1) % slides.length;
+      slides[i].classList.add("active");
+    }
+  }, 3500);
 
-rpc:{56:"https://bsc-dataseed.binance.org/"}
+
+  // PRICE TICKER
+  async function loadPrices(){
+    try{
+
+      let res = await fetch(
+      "https://api.coingecko.com/api/v3/coins/markets?vs_currency=usd&order=market_cap_desc&per_page=50&page=1"
+      );
+
+      let data = await res.json();
+
+      let txt = "";
+
+      data.forEach(c=>{
+        txt += `${c.symbol.toUpperCase()} $${c.current_price} • `;
+      });
+
+      document.getElementById("tickerText").innerHTML = txt;
+
+    }catch(e){
+      document.getElementById("tickerText").innerHTML =
+      "API blocked / internet issue";
+    }
+  }
+
+  loadPrices();
+setInterval(loadPrices,15000);
 
 });
+</script>
 
-await walletConnectProvider.enable();
+<script>
+window.addEventListener("load", function(){
 
-provider = new ethers.providers.Web3Provider(walletConnectProvider);
+let i = 0;
+const slides = document.querySelectorAll(".slide");
 
-const signer = provider.getSigner();
-
-const address = await signer.getAddress();
-
-document.getElementById("status").innerHTML =
-
-"Connected: " + address;
-
-document.getElementById("dashboard").style.display="block";
-
+setInterval(()=>{
+if(slides.length){
+slides[i].classList.remove("active");
+i = (i + 1) % slides.length;
+slides[i].classList.add("active");
 }
+}, 4000);
 
+});
 </script>
 
 </body>
+</html>
 
-</html>  
+
+
+
+
+
+
+
+
+
+
+
+
+  
