--- a/index.html
+++ b/index.html
@@ -241,42 +241,65 @@ function enter(){
 <span id="tickerText">Loading crypto market...</span>
 </div>
 
-<!-- PROJECT DETAILS -->
-<div class="section">
+<!-- PROJECT DETAILS GRAND -->
+<div class="section" style="text-align:center;">
 
-<h2 style="text-align:center;">
-<i class="fa-solid fa-layer-group icon"></i>
-Project Overview
+<h2 style="margin-bottom:40px;">
+<i class="fa-solid fa-folder-open icon"></i>
+DimeX Project Overview
 </h2>
 
-<div class="infoGrid">
+<div style="
+max-width:850px;
+margin:auto;
+display:flex;
+flex-direction:column;
+gap:25px;
+">
 
 <!-- TOKEN -->
-<div class="infoCard">
-<img src="https://raw.githubusercontent.com/glomartcom-netizen/Dimexhome/main/logodashbord.png" class="infoLogo">
-<div class="infoTitle">Token</div>
-<div class="infoValue">DMX</div>
+<div class="box" style="display:flex;align-items:center;gap:20px;">
+<img src="https://i.ibb.co/HpqwGFqt/logo.png" style="width:60px">
+<div style="text-align:left;">
+<b style="font-size:20px;">Token</b><br>
+DMX (DimeX)
+</div>
 </div>
 
 <!-- NETWORK -->
-<div class="infoCard">
-<img src="https://assets.coingecko.com/coins/images/825/large/bnb-icon2_2x.png" class="infoLogo">
-<div class="infoTitle">Network</div>
-<div class="infoValue">BNB Smart Chain</div>
+<div class="box" style="display:flex;align-items:center;gap:20px;">
+<img src="https://cryptologos.cc/logos/bnb-bnb-logo.png" style="width:50px">
+<div style="text-align:left;">
+<b style="font-size:20px;">Network</b><br>
+BNB Smart Chain
+</div>
 </div>
 
-<!-- VERIFIED -->
-<div class="infoCard">
-<img src="https://cryptologos.cc/logos/bnb-bnb-logo.png" class="infoLogo">
-<div class="infoTitle">Contract</div>
-<div class="infoValue">BscScan Verified</div>
+<!-- BSC VERIFIED -->
+<div class="box" style="display:flex;align-items:center;gap:20px;">
+<img src="https://raw.githubusercontent.com/glomartcom-netizen/Dimexhome/main/bscscanlogo.png" style="width:55px">
+<div style="text-align:left;">
+<b style="font-size:20px;">Contract</b><br>
+BscScan Verified
+</div>
+</div>
+
+<!-- STAKING -->
+<div class="box" style="display:flex;align-items:center;gap:20px;">
+<i class="fa-solid fa-coins" style="font-size:40px;color:gold;"></i>
+<div style="text-align:left;">
+<b style="font-size:20px;">Staking System</b><br>
+On-chain rewards + secure staking
+</div>
 </div>
 
 <!-- SUPPLY -->
-<div class="infoCard">
-<i class="fa-solid fa-database infoIcon"></i>
-<div class="infoTitle">Total Supply</div>
-<div class="infoValue">1,000,000,000 DMX</div>
+<div class="box" style="display:flex;align-items:center;gap:20px;">
+<i class="fa-solid fa-database" style="font-size:40px;color:gold;"></i>
+<div style="text-align:left;">
+<b style="font-size:20px;">Total Supply</b><br>
+1,000,000,000 DMX
+</div>
 </div>
 
 </div>
