--- a/index.html
+++ b/index.html
@@ -276,12 +276,13 @@ BNB Smart Chain
 </div>
 
 <!-- BSC VERIFIED -->
-<div class="box" style="display:flex;align-items:center;gap:20px;">
-<img src="https://raw.githubusercontent.com/glomartcom-netizen/Dimexhome/main/bscscanlogo.png" style="width:55px">
-<div style="text-align:left;">
-<b style="font-size:20px;">Contract</b><br>
-BscScan Verified
-</div>
+<div class="box">
+<i class="fa-solid fa-link icon"></i>
+<b>Contract Verified</b><br>
+
+<img src="https://seeklogo.com/images/B/bscscan-logo-1C8F3E6F9E-seeklogo.com.png" style="width:60px;margin-top:10px;"><br>
+
+Verified on BscScan
 </div>
 
 <!-- STAKING -->
@@ -496,58 +497,6 @@ Verify contract on
 <span style="color:gold;">BscScan</span>
 </div>
 
-</div>
-
-</div>
-</div>
-
-<!-- TOKENOMICS -->
-<div class="section">
-<div class="section-inner">
-
-<h2>
-<i class="fa-solid fa-coins icon"></i>
-Tokenomics
-</h2>
-
-<div class="grid" style="margin-top:30px;">
-
-<!-- TOTAL SUPPLY -->
-<div class="box" style="
-text-align:center;
-background:linear-gradient(180deg,#111,#070707);
-border:1px solid #222;
-padding:30px;
-">
-
-<div style="font-size:40px;color:gold;margin-bottom:10px;">
-<i class="fa-solid fa-database"></i>
-</div>
-
-<div style="font-size:16px;color:#aaa;">Total Supply</div>
-
-<div style="font-size:26px;font-weight:bold;color:#fff;margin-top:8px;">
-1,000,000,000 DMX
-</div>
-
-</div>
-
-<!-- REWARD POOL -->
-<div class="box" style="
-text-align:center;
-background:linear-gradient(180deg,#111,#070707);
-border:1px solid #222;
-padding:30px;
-">
-
-<div style="font-size:40px;color:gold;margin-bottom:10px;">
-<i class="fa-solid fa-gift"></i>
-</div>
-
-<div style="font-size:16px;color:#aaa;">Reward Pool</div>
-
-<div style="font-size:26px;font-weight:bold;color:#fff;margin-top:8px;">
-250,000,000 DMX
 </div>
 
 </div>   <!-- grid close -->
