--- a/index.html
+++ b/index.html
@@ -276,13 +276,12 @@ BNB Smart Chain
 </div>
 
 <!-- BSC VERIFIED -->
-<div class="box">
-<i class="fa-solid fa-link icon"></i>
-<b>Contract Verified</b><br>
-
-<img src="https://seeklogo.com/images/B/bscscan-logo-1C8F3E6F9E-seeklogo.com.png" style="width:60px;margin-top:10px;"><br>
-
-Verified on BscScan
+<div class="box" style="display:flex;align-items:center;gap:20px;">
+<img src="https://raw.githubusercontent.com/glomartcom-netizen/DimeXtest/main/bscscan-social-preview.png" style="width:50px">
+<div style="text-align:left;">  
+<b style="font-size:20px;">Contract</b><br>
+BscScan Verified
+</div>
 </div>
 
 <!-- STAKING -->
