--- a/index.html
+++ b/index.html
@@ -277,8 +277,8 @@ BNB Smart Chain
 
 <!-- BSC VERIFIED -->
 <div class="box" style="display:flex;align-items:center;gap:20px;">
-<img src="https://raw.githubusercontent.com/glomartcom-netizen/DimeXtest/main/bscscan-social-preview.png" style="width:50px">
-<div style="text-align:left;">  
+<img src="https://raw.githubusercontent.com/glomartcom-netizen/DimeXtest/main/bscscan-social-preview%20(2).png"
+<div style="text-align:left;"> 
 <b style="font-size:20px;">Contract</b><br>
 BscScan Verified
 </div>
