--- a/index.html
+++ b/index.html
@@ -80,6 +80,19 @@ color:gold;
 margin:0;
 }
 
+.stakingBanner{
+width:100%;
+background:#000;
+margin:0;
+padding:0;
+}
+
+.stakingBanner img{
+width:100%;
+height:auto;
+display:block;
+}
+  
 .btn{
 background:gold;
 border:none;
@@ -361,7 +374,12 @@ Global expansion
 
 </div>
 </div>
-   
+
+<!-- STAKING BANNER ONLY -->
+<div class="stakingBanner">
+  <img src="https://raw.githubusercontent.com/glomartcom-netizen/DimeXtest/main/Dimeximage.png">
+</div>
+  
 <!-- STAKING -->
 <div class="section">
 <h2><i class="fa-solid fa-coins"></i> Staking Platform</h2>
