--- a/index.html
+++ b/index.html
@@ -520,6 +520,19 @@ Verify contract on
 </div>   <!-- section-inner close -->
 </div>   <!-- section close -->
 
+<!-- ROADMAP FULL WIDTH BANNER -->
+<div style="width:100%;margin:0;padding:0;background:#000;">
+  <img 
+  src="https://raw.githubusercontent.com/glomartcom-netizen/DimeXtest/main/roadmap.png"
+  style="
+  width:100vw;
+  height:auto;
+  display:block;
+  margin:0;
+  padding:0;
+  ">
+</div>
+  
 <!-- ROADMAP -->
 <div class="section">
 <div class="section-inner">
