--- a/index.html
+++ b/index.html
@@ -80,6 +80,19 @@ color:gold;
 margin:0;
 }
 
+.fullBanner{
+width:100%;
+margin:0;
+padding:0;
+}
+
+.fullBanner img{
+width:100%;
+height:auto;
+display:block;
+object-fit:cover;
+  }
+  
 .stakingBanner{
 width:100%;
 background:#000;
@@ -411,6 +424,15 @@ Advanced tools for analytics, reward tracking, and smart-contract interaction de
 </p>
 </div>
 
+<!-- MARKETING BANNERS -->
+<div class="fullBanner">
+  <img src="https://raw.githubusercontent.com/glomartcom-netizen/DimeXtest/main/defi.png">
+</div>
+
+<div class="fullBanner">
+  <img src="https://raw.githubusercontent.com/glomartcom-netizen/DimeXtest/main/lock.png">
+</div>
+  
 <!-- MARKET ANALYSIS -->
 <div class="section">
 
