--- a/index.html
+++ b/index.html
@@ -222,9 +222,29 @@ color:#777;
 }
 
 @media(max-width:900px){
-.grid{grid-template-columns:1fr}
-.heroText h1{font-size:30px}
-.slider{height:75vh}
+
+.slider{
+height:95vh;
+}
+
+.heroText h1{
+font-size:26px;
+white-space:nowrap;
+}
+
+.section{
+padding:25px 5%;
+}
+
+.grid{
+grid-template-columns:1fr;
+gap:12px;
+}
+
+.box{
+padding:14px;
+}
+
 }
 </style>
 </head>
