--- a/index.html
+++ b/index.html
@@ -56,14 +56,18 @@ background:linear-gradient(to bottom,rgba(0,0,0,0.3),rgba(0,0,0,0.6));
 
 .topLogo{
 position:absolute;
-top:10px;
+top:0;              /* remove top gap */
 left:50%;
 transform:translateX(-50%);
 z-index:5;
+margin:0;
+padding:0;
 }
 
 .topLogo img{
-width:180px;
+width:180px;       
+display:block;
+margin:0 auto;
 }
   
 .heroText{
