--- a/index.html
+++ b/index.html
@@ -34,9 +34,8 @@ top:0;
 left:0;
 width:100%;
 height:100%;
-object-fit:contain;
+object-fit:cover;     /* IMPORTANT */
 object-position:center;
-background:#000;
 opacity:0;
 transition:opacity 1s ease-in-out;
 }
