--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ color:#fff;
 /* SLIDER */
 .slider{
 width:100%;
-height:90vh;
+height:100vh;   /* full height */
 position:relative;
 overflow:hidden;
 background:#000;
@@ -34,8 +34,9 @@ top:0;
 left:0;
 width:100%;
 height:100%;
-object-fit:cover;     /* IMPORTANT */
+object-fit:contain;   /* CUT ஆகாது */
 object-position:center;
+background:#000;
 opacity:0;
 transition:opacity 1s ease-in-out;
 }
