--- a/index.html
+++ b/index.html
@@ -711,16 +711,23 @@ setInterval(loadPrices,15000);
 <script>
 window.addEventListener("load", function(){
 
+let slides = document.querySelectorAll(".slide");
 let i = 0;
-const slides = document.querySelectorAll(".slide");
 
 setInterval(()=>{
-if(slides.length){
-slides[i].classList.remove("active");
-i = (i + 1) % slides.length;
-slides[i].classList.add("active");
-}
-}, 4000);
+
+let current = slides[i];
+let next = slides[(i+1) % slides.length];
+
+next.classList.add("active");
+
+setTimeout(()=>{
+current.classList.remove("active");
+}, 1000); // match transition time
+
+i = (i+1) % slides.length;
+
+}, 3500);
 
 });
 </script>
