--- a/index.html
+++ b/index.html
@@ -46,9 +46,19 @@ opacity:1;
 .mobile{display:none;}
 
 @media(max-width:768px){
+
 .desktop{display:none;}
 .mobile{display:block;}
 .slider{height:80vh;}
+
+.grid{
+grid-template-columns:1fr;
+}
+
+.section{
+padding:40px 6%;
+}
+
 }
 
 .overlay{
@@ -714,24 +724,19 @@ window.addEventListener("load", function(){
 let slides = document.querySelectorAll(".slide");
 let i = 0;
 
+slides[0].classList.add("active");
+
 setInterval(()=>{
 
-let current = slides[i];
-let next = slides[(i+1) % slides.length];
-
-next.classList.add("active");
-
-setTimeout(()=>{
-current.classList.remove("active");
-}, 1000); // match transition time
-
-i = (i+1) % slides.length;
+slides[i].classList.remove("active");
+i = (i + 1) % slides.length;
+slides[i].classList.add("active");
 
 }, 3500);
 
 });
 </script>
-
+  
 </body>
 </html>
 
