--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ width:100%;
 height:100%;
 object-fit:cover;
 opacity:0;
-transition:opacity 1s;
+transition:opacity 0.9s ease-in-out;
 }
 
 .slide.active{
