--- a/index.html
+++ b/index.html
@@ -36,11 +36,12 @@ width:100%;
 height:100%;
 object-fit:cover;
 opacity:0;
-transition:opacity 0.9s ease-in-out;
+transition:opacity 0.7s ease-in-out;
 }
 
 .slide.active{
 opacity:1;
+z-index:2;
 }
 
 .mobile{display:none;}
