--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@ width:100%;
 height:100%;
 object-fit:cover;
 opacity:0;
-transition:opacity 0.7s ease-in-out;
+transition:opacity 0.6s ease-in-out;
+z-index:0;   /* ADD THIS */
 }
 
 .slide.active{
@@ -81,6 +82,7 @@ left:0;
 width:100%;
 height:100%;
 background:linear-gradient(to bottom,rgba(0,0,0,0.3),rgba(0,0,0,0.6));
+z-index:1;   /* ADD THIS */
 }
 
 .topLogo{
@@ -101,10 +103,11 @@ margin:0 auto;
   
 .heroText{
 position:absolute;
-bottom:40px;   /* gap reduce */
+bottom:40px;
 left:50%;
 transform:translateX(-50%);
 text-align:center;
+z-index:10;   /* ADD THIS */
 }
 
 .heroText h1{
@@ -723,21 +726,25 @@ window.addEventListener("load", function(){
 
 let slides;
 
+// mobile or desktop detect
 if(window.innerWidth <= 768){
   slides = document.querySelectorAll(".slide.mobile");
 }else{
   slides = document.querySelectorAll(".slide.desktop");
 }
 
+// 👉 FIRST image immediately show
+slides[0].style.opacity = "1";
+
 let i = 0;
 
 setInterval(function(){
 
-slides[i].classList.remove("active");
+slides[i].style.opacity = "0";
 
 i = (i + 1) % slides.length;
 
-slides[i].classList.add("active");
+slides[i].style.opacity = "1";
 
 }, 3500);
 
