--- a/index.html
+++ b/index.html
@@ -62,15 +62,27 @@ grid-template-columns:1fr !important;
 }
 
 .section{
-padding:35px 6%;
+padding:25px 5%;
 }
 
+.grid{
+  gap:14px;          /* cards gap குறையும் */
+}
+
+.box{
+  padding:16px;      /* உள்ள gap குறையும் */
+}
+
+p{
+  line-height:1.5;   /* paragraph tight */
+}
+  
 .box{
 width:100%;
 }
 
 .heroText h1{
-font-size:28px;
+font-size:26px;
 }
 
 }
