--- a/index.html
+++ b/index.html
@@ -44,6 +44,17 @@ z-index:0;   /* ADD THIS */
 opacity:1;
 z-index:2;
 }
+
+/* overlay */
+.overlay{
+position:absolute;
+top:0;
+left:0;
+width:100%;
+height:100%;
+background:linear-gradient(to bottom,rgba(0,0,0,0.5),rgba(0,0,0,0.7));
+z-index:1;
+}
   
 .topLogo{
 position:absolute;
@@ -157,21 +168,18 @@ gap:10px;   /* 25px → 10px */
 }
 
 .infoCard{
-.infoCard{
-background:#080808;          /* darker */
-border:1px solid rgba(255,255,255,0.06);
-padding:32px;
+background:#0d0d0d;
+border:1px solid #222;
+padding:35px;
 border-radius:16px;
 text-align:center;
 transition:0.3s;
-box-shadow:0 0 20px rgba(0,0,0,0.6);   /* depth */
 }
 
 .infoCard:hover{
 border:1px solid gold;
-box-shadow:0 0 30px rgba(255,215,0,0.25);
+box-shadow:0 0 25px rgba(255,215,0,0.2);
 transform:translateY(-4px);
-}
 
 .infoLogo{
 width:50px;
@@ -213,40 +221,16 @@ padding:20px;
 border-radius:12px;
 }
 
-/* ===== SAFE FINAL STYLE ===== */
-
-/* box normal */
-.box{
-background:#111;
-padding:20px;
-border-radius:12px;
-}
-
-/* Footer style */
+/* footer */
 .footer{
-  text-align:center;
-  padding:40px;
-  color:#777;
-}  
-  
-/* overlay dark but correct */
-.overlay{
-position:absolute;
-top:0;
-left:0;
-width:100%;
-height:100%;
-background:linear-gradient(to bottom,rgba(0,0,0,0.65),rgba(0,0,0,0.9));
-z-index:1;
+text-align:center;
+padding:40px;
+color:#777;
 }
 
-/* paragraph tight gap */
-.section p{
-margin-bottom:8px;
-line-height:1.55;
-}
+/* MOBILE */
+.mobile{display:none;}
 
-/* ===== MOBILE ===== */
 @media(max-width:768px){
 
 .desktop{display:none;}
@@ -254,28 +238,19 @@ line-height:1.55;
 
 .slider{height:82vh;}
 
-.section{padding:24px 5%;}
+.section{padding:35px 6%;}
 
 .grid{
 grid-template-columns:1fr !important;
-gap:14px;
+gap:16px;
 }
 
-.box{
-padding:16px;
-}
-
-.heroText h1{
-font-size:26px;
-}
-
-.section p{
-margin-bottom:6px;
-line-height:1.5;
-}
+.box{padding:16px;}
 
 }
-</style> 
+
+</style>
+  
 </head>
   
 <body>
