--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@ width:100%;
 height:100%;
 object-fit:cover;
 opacity:0;
-transition:opacity 0.6s ease-in-out;
-z-index:0;   /* ADD THIS */
+transition:opacity .6s ease-in-out;
+z-index:0;
 }
 
 .slide.active{
@@ -52,9 +52,8 @@ top:0;
 left:0;
 width:100%;
 height:100%;
-background:linear-gradient(to bottom,rgba(0,0,0,0.5),rgba(0,0,0,0.7));
+background:linear-gradient(to bottom,rgba(0,0,0,0.55),rgba(0,0,0,0.75));
 z-index:1;
-}
   
 .topLogo{
 position:absolute;
@@ -167,19 +166,28 @@ flex-direction:column;
 gap:10px;   /* 25px → 10px */
 }
 
+/* CARDS */
+.box{
+background:#111;
+padding:20px;
+border-radius:12px;
+}
+
+/* info cards */
 .infoCard{
 background:#0d0d0d;
 border:1px solid #222;
 padding:35px;
 border-radius:16px;
 text-align:center;
-transition:0.3s;
+transition:.3s;
 }
 
 .infoCard:hover{
 border:1px solid gold;
 box-shadow:0 0 25px rgba(255,215,0,0.2);
 transform:translateY(-4px);
+}
 
 .infoLogo{
 width:50px;
@@ -229,6 +237,7 @@ color:#777;
 }
 
 /* MOBILE */
+/* MOBILE */
 .mobile{display:none;}
 
 @media(max-width:768px){
@@ -238,17 +247,24 @@ color:#777;
 
 .slider{height:82vh;}
 
-.section{padding:35px 6%;}
+.section{
+padding:32px 5%;
+}
 
 .grid{
 grid-template-columns:1fr !important;
 gap:16px;
 }
 
-.box{padding:16px;}
-
+.box{
+padding:16px;
 }
 
+.heroText h1{
+font-size:26px;
+}
+
+}
 </style>
   
 </head>
