--- a/index.html
+++ b/index.html
@@ -204,14 +204,14 @@ flex-direction:column;
 gap:25px;  
 }  
   
-.infoCard{  
-background:#0d0d0d;  
-border:1px solid #222;  
-padding:35px;  
-border-radius:16px;  
-text-align:center;  
-transition:0.3s;  
-}  
+/* MATTE DARK CARD */
+.box{
+background:#0a0a0a;        /* matte black */
+border:1px solid #141414;  /* light edge */
+border-radius:12px;
+padding:20px;
+box-shadow:none;
+}
   
 .infoCard:hover{  
 border:1px solid gold;  
