--- a/index.html
+++ b/index.html
@@ -206,11 +206,12 @@ gap:25px;
   
 /* MATTE DARK CARD */
 .box{
-background:#0a0a0a;        /* matte black */
-border:1px solid #141414;  /* light edge */
-border-radius:12px;
-padding:20px;
-box-shadow:none;
+background:#111111;          /* matte dark grey */
+  border:1px solid #1c1c1c;    /* soft edge */
+  border-radius:14px;
+  padding:20px;
+  box-shadow:none;             /* no glossy shine */
+  transition:0.3s ease;
 }
   
 .infoCard:hover{  
