--- a/index.html
+++ b/index.html
@@ -47,38 +47,36 @@ z-index:2;
 .mobile{display:block;}  
 
 p{
-    line-height:1.4;
-    margin-bottom:6px;
-  }
+  font-size:14px;
+  line-height:1.35;
+  margin-bottom:6px;
+}
 
   .section{
-    padding:22px 5%;
+    padding:20px 5%;
   }
 
   .box{
   margin-bottom:10px;
   padding:16px;
+  border-radius:12px;
 }
 
 .grid{
   gap:14px;
+  grid-template-columns:1fr !important;
 }
   
 .slider{  
 height:82vh;  
 }  
   
-.grid{  
-display:grid;  
-grid-template-columns:1fr !important;  
-}    
-  
 .box{  
 width:100%;  
 }  
   
 .heroText h1{  
-font-size:28px;  
+font-size:26px;  
 }  
   
 }  
@@ -185,11 +183,7 @@ animation:scroll 50s linear infinite;
 padding:60px 8%;  
 max-width:1200px;  
 margin:auto;  
-}  
-  
-.section:nth-child(even){  
-background:#0b0b0b;  
-}  
+} 
   
 .section h2{  
 color:gold;  
@@ -206,10 +200,11 @@ gap:25px;
   
 /* MATTE DARK CARD */
 .box{
-background:#111111;
-  border:1px solid #1c1c1c;
-  border-radius:14px;
-  padding:20px;
+background:#151515;   /* matte grey */
+border:1px solid #1f1f1f;
+border-radius:14px;
+padding:20px;
+}
 
   /* SOFT EDGE SHADOW */
   box-shadow:
