--- a/index.html
+++ b/index.html
@@ -52,10 +52,21 @@ p{
   margin-bottom:6px;
 }
 
-  .section{
-    padding:20px 5%;
-  }
+.section{
+  padding:18px 5% !important;
+  margin:0 !important;
+}
 
+/* section between gap remove */
+.section + .section{
+  margin-top:0 !important;
+}
+
+/* headings gap */
+.section h2{
+  margin-bottom:12px;
+}
+  
   .box{
   margin-bottom:10px;
   padding:16px;
