--- a/index.html
+++ b/index.html
@@ -66,6 +66,13 @@ p{
 .section h2{
   margin-bottom:12px;
 }
+
+.section h2{
+  font-size:20px;
+  line-height:1.2;
+  margin-bottom:8px;
+  letter-spacing:0.3px;
+}
   
   .box{
   margin-bottom:10px;
