--- a/index.html
+++ b/index.html
@@ -39,65 +39,64 @@ opacity:1;
 z-index:2;
 }
   
-.mobile{display:none;}  
-  
-@media(max-width:768px){  
-  
-.desktop{display:none;}  
-.mobile{display:block;}  
+.mobile{display:none;}
 
+@media(max-width:768px){
+
+.desktop{display:none;}
+.mobile{display:block;}
+
+/* Paragraph */
 p{
   font-size:14px;
   line-height:1.35;
-  margin-bottom:6px;
+  margin:0 0 6px 0;
 }
 
+/* Section spacing */
 .section{
-  padding:18px 5% !important;
-  margin:0 !important;
+  padding:16px 5%;
+  margin:0;
 }
 
-/* section between gap remove */
+/* Remove section-to-section gap */
 .section + .section{
-  margin-top:0 !important;
+  margin-top:0;
 }
 
-/* headings gap */
+/* Heading */
 .section h2{
-  margin-bottom:12px;
-}
-
-.section h2{
-  font-size:20px;
+  font-size:19px;
   line-height:1.2;
-  margin-bottom:8px;
-  letter-spacing:0.3px;
-}
-  
-  .box{
-  margin-bottom:10px;
-  padding:16px;
-  border-radius:12px;
+  margin:0 0 6px 0;
+  letter-spacing:0.2px;
 }
 
+/* Card box */
+.box{
+  margin:8px 0;
+  padding:14px;
+  border-radius:12px;
+  width:100%;
+}
+
+/* Grid */
 .grid{
-  gap:14px;
+  gap:12px;
   grid-template-columns:1fr !important;
 }
-  
-.slider{  
-height:82vh;  
-}  
-  
-.box{  
-width:100%;  
-}  
-  
-.heroText h1{  
-font-size:26px;  
-}  
-  
-}  
+
+/* Slider */
+.slider{
+  height:82vh;
+}
+
+/* Hero title */
+.heroText h1{
+  font-size:24px;
+}
+
+}
   
 .overlay{
 position:absolute;
