--- a/index.html
+++ b/index.html
@@ -94,7 +94,23 @@ p{
 /* Hero title */
 .heroText h1{
   font-size:24px;
+  
+/* final mobile gap tighten */
+.section{
+  padding:16px 5% !important;
 }
+
+.section + .section{
+  padding-top:8px !important;
+}
+
+.section h2{
+  margin-bottom:6px;
+}
+
+p{
+  margin-bottom:6px;
+  }
 
 }
   
