--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@ p{
 
 /* Section spacing */
 .section{
-  padding:16px 5%;
+  padding:14px 5%;
   margin:0;
 }
 
-/* Remove section-to-section gap */
+/* Remove section gap */
 .section + .section{
-  margin-top:0;
+  margin-top:8px;
 }
 
 /* Heading */
@@ -72,7 +72,7 @@ p{
   letter-spacing:0.2px;
 }
 
-/* Card box */
+/* Card */
 .box{
   margin:8px 0;
   padding:14px;
@@ -94,23 +94,7 @@ p{
 /* Hero title */
 .heroText h1{
   font-size:24px;
-  
-/* final mobile gap tighten */
-.section{
-  padding:16px 5% !important;
 }
-
-.section + .section{
-  padding-top:8px !important;
-}
-
-.section h2{
-  margin-bottom:6px;
-}
-
-p{
-  margin-bottom:6px;
-  }
 
 }
   
