--- a/index.html
+++ b/index.html
@@ -46,54 +46,54 @@ z-index:2;
 .desktop{display:none;}
 .mobile{display:block;}
 
-/* Paragraph */
+/* GLOBAL TEXT */
 p{
   font-size:14px;
-  line-height:1.35;
-  margin:0 0 6px 0;
+  line-height:1.3;
+  margin:0 0 5px 0;
 }
 
-/* Section spacing */
+/* SECTION GAP FIX */
 .section{
   padding:14px 5%;
   margin:0;
 }
 
-/* Remove section gap */
+/* remove big space between sections */
 .section + .section{
-  margin-top:8px;
+  margin-top:6px;
 }
 
-/* Heading */
+/* HEADINGS */
 .section h2{
   font-size:19px;
   line-height:1.2;
   margin:0 0 6px 0;
-  letter-spacing:0.2px;
 }
 
-/* Card */
+/* BOX CARDS */
 .box{
-  margin:8px 0;
+  margin:6px 0;
   padding:14px;
   border-radius:12px;
   width:100%;
+  background:#111;   /* matte grey-black */
 }
 
-/* Grid */
+/* GRID */
 .grid{
-  gap:12px;
+  gap:10px;
   grid-template-columns:1fr !important;
 }
 
-/* Slider */
-.slider{
-  height:82vh;
-}
-
-/* Hero title */
+/* HERO */
 .heroText h1{
   font-size:24px;
+}
+
+/* SLIDER HEIGHT */
+.slider{
+  height:82vh;
 }
 
 }
