--- a/index.html
+++ b/index.html
@@ -46,38 +46,37 @@ z-index:2;
 .desktop{display:none;}
 .mobile{display:block;}
 
-/* GLOBAL TEXT */
+/* TEXT */
 p{
   font-size:14px;
-  line-height:1.3;
-  margin:0 0 5px 0;
+  line-height:1.28;
+  margin:0 0 4px 0;
 }
 
-/* SECTION GAP FIX */
+/* SECTION */
 .section{
-  padding:14px 5%;
-  margin:0;
+  padding:12px 5% !important;
+  margin:0 !important;
 }
 
 /* remove big space between sections */
 .section + .section{
-  margin-top:6px;
+  margin-top:4px !important;
 }
 
 /* HEADINGS */
 .section h2{
-  font-size:19px;
-  line-height:1.2;
-  margin:0 0 6px 0;
+  font-size:18px;
+  line-height:1.15;
+  margin:0 0 4px 0;
 }
 
-/* BOX CARDS */
+/* BOX */
 .box{
   margin:6px 0;
   padding:14px;
   border-radius:12px;
-  width:100%;
-  background:#111;   /* matte grey-black */
+  background:#111;
 }
 
 /* GRID */
@@ -91,7 +90,7 @@ p{
   font-size:24px;
 }
 
-/* SLIDER HEIGHT */
+/* SLIDER */
 .slider{
   height:82vh;
 }
