--- a/index.html
+++ b/index.html
@@ -46,32 +46,31 @@ z-index:2;
 .desktop{display:none;}
 .mobile{display:block;}
 
-/* TEXT */
+/* ===== TEXT ===== */
 p{
   font-size:14px;
-  line-height:1.28;
+  line-height:1.25;
   margin:0 0 4px 0;
 }
 
-/* SECTION */
+/* ===== SECTION GAP REMOVE ===== */
 .section{
   padding:12px 5% !important;
   margin:0 !important;
 }
 
-/* remove big space between sections */
 .section + .section{
-  margin-top:4px !important;
+  margin-top:2px !important;
 }
 
-/* HEADINGS */
+/* ===== HEADINGS ===== */
 .section h2{
   font-size:18px;
   line-height:1.15;
   margin:0 0 4px 0;
 }
 
-/* BOX */
+/* ===== BOX ===== */
 .box{
   margin:6px 0;
   padding:14px;
@@ -79,18 +78,18 @@ p{
   background:#111;
 }
 
-/* GRID */
+/* ===== GRID ===== */
 .grid{
   gap:10px;
   grid-template-columns:1fr !important;
 }
 
-/* HERO */
+/* ===== HERO ===== */
 .heroText h1{
   font-size:24px;
 }
 
-/* SLIDER */
+/* ===== SLIDER ===== */
 .slider{
   height:82vh;
 }
