--- a/index.html
+++ b/index.html
@@ -389,7 +389,19 @@ Sustainable rewards
 Global expansion  
 </div>  </div>  
 </div>  <!-- STAKING BANNER ONLY -->  <div class="stakingBanner">  
-  <img src="https://raw.githubusercontent.com/glomartcom-netizen/DimeXtest/main/Dimeximage.png">  
+  <img src="https://raw.githubusercontent.com/glomartcom-netizen/DimeXtest/main/Dimeximage.png">
+  <div class="fullBanner">
+<img src="https://raw.githubusercontent.com/glomartcom-netizen/DimeXtest/main/staking.png">
+</div>
+
+<div class="fullBanner">
+<img src="https://raw.githubusercontent.com/glomartcom-netizen/DimeXtest/main/level.png">
+</div>
+
+<div class="fullBanner">
+<img src="https://raw.githubusercontent.com/glomartcom-netizen/DimeXtest/main/teambonus.png">
+</div>
+  
 </div>  <!-- STAKING -->  <div class="section">  
 <h2><i class="fa-solid fa-coins"></i> Staking Platform</h2>  
 <p>  
