--- a/index.html
+++ b/index.html
@@ -360,7 +360,22 @@ On-chain rewards + secure staking
 DimeX is designed as a staking-focused crypto ecosystem that enables users to stake DMX tokens and participate in a transparent on-chain reward system.    
 The platform emphasizes simplicity, long-term sustainability, and trust while creating a secure environment for users to earn rewards through blockchain technology.  
 </p>  
-</div>  
+</div>
+
+  <!-- MISSION FULL BANNER -->
+<div class="fullBanner">
+  <img src="https://raw.githubusercontent.com/glomartcom-netizen/DimeXtest/main/mission.png">
+</div>
+
+<!-- VISION FULL BANNER -->
+<div class="fullBanner">
+  <img src="https://raw.githubusercontent.com/glomartcom-netizen/DimeXtest/main/vision.png">
+</div>
+
+<!-- VALUES FULL BANNER -->
+<div class="fullBanner">
+  <img src="https://raw.githubusercontent.com/glomartcom-netizen/DimeXtest/main/valus.png">
+</div>
 <!-- MISSION + VISION -->  
 <div class="section grid">  
 <div>  
