--- a/index.html
+++ b/index.html
@@ -363,18 +363,9 @@ The platform emphasizes simplicity, long-term sustainability, and trust while cr
 </div>
 
   <!-- MISSION FULL BANNER -->
+<div<!-- VMV Full Banner -->
 <div class="fullBanner">
-  <img src="https://raw.githubusercontent.com/glomartcom-netizen/DimeXtest/main/mission.png">
-</div>
-
-<!-- VISION FULL BANNER -->
-<div class="fullBanner">
-  <img src="https://raw.githubusercontent.com/glomartcom-netizen/DimeXtest/main/vision.png">
-</div>
-
-<!-- VALUES FULL BANNER -->
-<div class="fullBanner">
-  <img src="https://raw.githubusercontent.com/glomartcom-netizen/DimeXtest/main/valus.png">
+  <img src="https://raw.githubusercontent.com/glomartcom-netizen/DimeXtest/main/vmv.png" alt="Mission Vision Values Banner">
 </div>
 <!-- MISSION + VISION -->  
 <div class="section grid">  
